--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "build": "tsc",
         "scenario1": "tsc; node build/scenario1.js",
         "scenario2": "tsc; node build/scenario2.js",
-        "asyncqueue": "tsc; node build/asyncqueue.js"
+        "scenario3": "tsc; node build/scenario3.js",
+        "scenario4": "tsc; node build/scenario4.js",
+        "asyncqueue": "tsc; node build/asyncqueue.js",
+        "test": "npm run build && node build/tests/testScenario1"
     }
 }
