initialize peers and service locators

--- a/final/broker/mos.conf
+++ b/final/broker/mos.conf
@@ -2,4 +2,5 @@ listener 9001
 protocol websockets
 persistence true
 persistence_location /mosquitto/data/
+log_type all
 # log_dest file /mosquitto/log/mosquitto.log
