--- a/final/package.json
+++ b/final/package.json
@@ -10,10 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/backbone": "^1.4.0",
+    "@types/jquery": "^3.3.29",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
-  }
+    "webpack-dev-server": "^3.2.1",
+    "jointjs": "^3.0.0",
+    "@types/jointjs": "^2.0.0",
+    "backbone": "^1.4.0",
+    "@types/lodash": "^4.14.134"
+  },
+  "dependencies": {}
 }
