--- a/final/package.json
+++ b/final/package.json
@@ -22,5 +22,7 @@
     "backbone": "^1.4.0",
     "@types/lodash": "^4.14.134"
   },
-  "dependencies": {}
+  "dependencies": {
+    "md5-typescript": "^1.0.5"
+  }
 }
